--- a/cf/bioinformatics-access-group.yaml
+++ b/cf/bioinformatics-access-group.yaml
@@ -2,7 +2,7 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: Set up permissions for bioinformatics to manage the data ingest script [managed by github.com/biomage-ltd/iac]
 
 Resources: 
-  StagingAccessGroup: 
+  BioinformaticsAccessGroup: 
     Type: AWS::IAM::Group
     Properties: 
       GroupName: "bioinformatics-data-ingest-access"
