--- a/cf/bioinformatics-access-group.yaml
+++ b/cf/bioinformatics-access-group.yaml
@@ -55,6 +55,6 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                  - 'dynamodb::PutItem'
+                  - 'dynamodb:PutItem'
                 Resource:
                   - !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/experiments-${Environment}"
