--- a/cf/bioinformatics-access-group.yaml
+++ b/cf/bioinformatics-access-group.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: Set up permissions for bioinformatics to manage the data ingest script [managed by github.com/hms-dbmi-cellenics/iac]
+Description: Set up permissions for bioinformatics [managed by github.com/hms-dbmi-cellenics/iac]
 
 Parameters:
   Environment:
@@ -15,7 +15,7 @@ Resources:
   BioinformaticsAccessGroup:
     Type: AWS::IAM::Group
     Properties:
-      GroupName: !Sub "bioinformatics-data-ingest-${Environment}-access"
+      GroupName: !Sub "bioinformatics-${Environment}-access"
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
       Policies:
