--- a/cf/bioinformatics-access-group.yaml
+++ b/cf/bioinformatics-access-group.yaml
@@ -29,4 +29,5 @@ Resources:
                 Resource:
                   - !Sub "arn:aws:s3:::biomage-originals-${Environment}-${AWS::AccountId}/*"
                   - !Sub "arn:aws:s3:::biomage-source-${Environment}-${AWS::AccountId}/*"
+                  - "arn:aws:s3:::cf-templates-*"
 
